Volume up and down demo

--- a/static/index.html
+++ b/static/index.html
@@ -25,8 +25,8 @@
         <![endif]-->
 
         <div class="wrapper guide">
-            <button id="start" type="button">Mouse</button>
-            <button id="start" type="button">Keyboard</button>
+            <button id="choose-mouse" type="button">Volume Up</button>
+            <button id="choose-keyboard" type="button">Volume Down</button>
         </div>
         <canvas width="3000" height="3000" id="canvas"></canvas>
 
