--- a/static/index.html
+++ b/static/index.html
@@ -1,38 +1,109 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Kauko</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-        <meta name="apple-mobile-web-app-capable" content="yes" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Kauko</title>
 
-        <link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-touch-icon-72.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-114.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-144.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
-        <link rel="stylesheet" href="/static/css/normalize.css">
-        <link rel="stylesheet" href="/static/css/main.css">
-        <link rel="stylesheet" href="/static/css/spectrum.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
 
-        <div class="wrapper guide">
-            <button id="choose-mouse" type="button">Volume Up</button>
-            <button id="choose-keyboard" type="button">Volume Down</button>
+    <!--
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    -->
+    <link href="/static/css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <!-- Todo: add icons
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/img/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/img/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/img/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/static/img/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="/static/img/favicon.png">
+    -->
+  </head>
+
+  <body>
+
+    <div class="container-fluid">
+
+      <div class="row-fluid top-row">
+        <div class="span4"></div>
+        <div class="span4"></div>
+        <div class="span4">
+          <button type="button" class="btn btn-large btn-danger" id="button-shutdown">
+            <img src="/static/img/shutdown.png" alt="Shutdown">
+          </button>
         </div>
-        <canvas width="3000" height="3000" id="canvas"></canvas>
+      </div>
 
-        <script src="/static/js/vendor/jquery-1.8.2.min.js"></script>
-        <script src="/static/js/plugins.js"></script>
-        <script src="/static/js/pointerevents.js"></script>
-        <script src="/static/js/main.js"></script>
-    </body>
+
+      <div class="row-fluid a">
+        <div class="span4"></div>
+        <div class="span4">
+
+
+
+          <div class="row-fluid">
+            <div class="span4"></div>
+            <div class="span4">
+              <button type="button" class="btn btn-large" id="button-volume-up">
+                <img src="/static/img/plus.png" alt="Volume up">
+              </button>
+            </div>
+            <div class="span4"></div>
+          </div>
+
+          <div class="row-fluid">
+            <div class="span4">
+              <button type="button" class="btn btn-large" id="button-previous-track">
+                <img src="/static/img/rewind.png" alt="Previous track">
+              </button>
+            </div>
+            <div class="span4"></div>
+            <div class="span4">
+              <button type="button" class="btn btn-large" id="button-next-track">
+                <img src="/static/img/forward.png" alt="Next track">
+              </button>
+            </div>
+          </div>
+
+          <div class="row-fluid">
+            <div class="span4"></div>
+            <div class="span4">
+              <button type="button" class="btn btn-large" id="button-volume-down">
+                <img src="/static/img/minus.png" alt="Volume down">
+              </button>
+            </div>
+            <div class="span4"></div>
+          </div>
+
+
+        </div>
+        <div class="span4"></div>
+      </div>
+
+    </div>
+
+
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/static/js/jquery-1.8.2.min.js"></script>
+    <script src="/static/js/plugins.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/pointerevents.js"></script>
+    <script src="/static/js/main.js"></script>
+
+  </body>
 </html>
