--- a/static/index.html
+++ b/static/index.html
@@ -33,17 +33,20 @@
     <link rel="apple-touch-icon-precomposed" href="/static/img/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="/static/img/favicon.png">
     -->
+
+  <script src="/static/js/modernizr-2.6.2.min.js"></script>
+
   </head>
 
   <body>
 
-    <div class="container-fluid">
+    <div touch-action="none" class="container-fluid">
 
       <div class="row-fluid top-row">
         <div class="span4"></div>
         <div class="span4"></div>
         <div class="span4">
-          <button type="button" class="btn btn-large btn-danger" id="button-shutdown">
+          <button type="button" class="btn btn-large btn-danger" id="button-toggle-sleep-display">
             <img src="/static/img/shutdown.png" alt="Shutdown">
           </button>
         </div>
@@ -53,8 +56,6 @@
       <div class="row-fluid a">
         <div class="span4"></div>
         <div class="span4">
-
-
 
           <div class="row-fluid">
             <div class="span4"></div>
@@ -72,7 +73,11 @@
                 <img src="/static/img/rewind.png" alt="Previous track">
               </button>
             </div>
-            <div class="span4"></div>
+            <div class="span4">
+              <button type="button" class="btn btn-large" id="button-play-pause">
+                <img src="/static/img/play.png" alt="Play/Pause">
+              </button>
+            </div>
             <div class="span4">
               <button type="button" class="btn btn-large" id="button-next-track">
                 <img src="/static/img/forward.png" alt="Next track">
@@ -89,7 +94,6 @@
             </div>
             <div class="span4"></div>
           </div>
-
 
         </div>
         <div class="span4"></div>
