--- a/static/index.html
+++ b/static/index.html
@@ -9,11 +9,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
 
     <!--
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
@@ -38,65 +33,82 @@
 
   </head>
 
-  <body>
+  <body touch-action="none">
 
-    <div touch-action="none" class="container-fluid">
+    <div id="div-touch-pad" class="fullscreen touch-pad">
+      <img id="button-close-touch-pad" class="button-close" src="/static/img/close.png" alt="Close">
+    </div>
 
-      <div class="row-fluid top-row">
-        <div class="span4"></div>
-        <div class="span4"></div>
+    <div id="div-keyboard" class="fullscreen keyboard">
+      <img id="button-close-keyboard" class="button-close" src="/static/img/close.png" alt="Close">
+      <h1>Write here</h1>
+      <div class="input-wrapper">
+        <input type="text" id="input-keyboard">
+      </div>
+    </div>
+
+    <div touch-action="none" class="silver-gradient top-border-radius container">
+
+      <div class="top-controls row-fluid">
+        <div class="span4">
+          <button type="button" class="btn-inverse btn btn-large" id="button-keyboard">
+            <img src="/static/img/keyboard-light.png" alt="Keyboard">
+          </button>
+        </div>
+        <div class="span4">
+          <button type="button" class="btn-inverse btn btn-large" id="button-touch-pad">
+            <img src="/static/img/mouse-light.png" alt="Mouse">
+          </button>
+        </div>
         <div class="span4">
           <button type="button" class="btn btn-large btn-danger" id="button-toggle-sleep-display">
-            <img src="/static/img/shutdown.png" alt="Shutdown">
+            <img src="/static/img/sleep-display.png" alt="Sleep display">
           </button>
         </div>
       </div>
 
-
-      <div class="row-fluid a">
-        <div class="span4"></div>
-        <div class="span4">
-
-          <div class="row-fluid">
-            <div class="span4"></div>
-            <div class="span4">
-              <button type="button" class="btn btn-large" id="button-volume-up">
-                <img src="/static/img/plus.png" alt="Volume up">
-              </button>
-            </div>
-            <div class="span4"></div>
+      <div class="media-controls">
+        <div class="row-fluid">
+          <div class="span4"></div>
+          <div class="span4">
+            <button type="button" class="btn-inverse btn btn-large" id="button-volume-up">
+              <img src="/static/img/plus-light.png" alt="Volume up">
+            </button>
           </div>
-
-          <div class="row-fluid">
-            <div class="span4">
-              <button type="button" class="btn btn-large" id="button-previous-track">
-                <img src="/static/img/rewind.png" alt="Previous track">
-              </button>
-            </div>
-            <div class="span4">
-              <button type="button" class="btn btn-large" id="button-play-pause">
-                <img src="/static/img/play.png" alt="Play/Pause">
-              </button>
-            </div>
-            <div class="span4">
-              <button type="button" class="btn btn-large" id="button-next-track">
-                <img src="/static/img/forward.png" alt="Next track">
-              </button>
-            </div>
-          </div>
-
-          <div class="row-fluid">
-            <div class="span4"></div>
-            <div class="span4">
-              <button type="button" class="btn btn-large" id="button-volume-down">
-                <img src="/static/img/minus.png" alt="Volume down">
-              </button>
-            </div>
-            <div class="span4"></div>
-          </div>
-
+          <div class="span4"></div>
         </div>
-        <div class="span4"></div>
+
+        <div class="row-fluid">
+          <div class="span4">
+            <button type="button" class="btn-inverse btn btn-large" id="button-previous-track">
+              <img src="/static/img/rewind-light.png" alt="Previous track">
+            </button>
+          </div>
+          <div class="span4">
+            <button type="button" class="btn-inverse btn btn-large" id="button-play-pause">
+              <img src="/static/img/play-pause-light.png" alt="Play/Pause">
+            </button>
+          </div>
+          <div class="span4">
+            <button type="button" class="btn-inverse btn btn-large" id="button-next-track">
+              <img src="/static/img/forward-light.png" alt="Next track">
+            </button>
+          </div>
+        </div>
+
+        <div class="row-fluid">
+          <div class="span4">
+            <button type="button" class="btn-inverse btn btn-mute" id="button-mute">
+              <img src="/static/img/mute-light.png" alt="Mute">
+            </button>
+          </div>
+          <div class="span4">
+            <button type="button" class="btn-inverse btn btn-large" id="button-volume-down">
+              <img src="/static/img/minus-light.png" alt="Volume down">
+            </button>
+          </div>
+          <div class="span4"></div>
+        </div>
       </div>
 
     </div>
