Added support for touchpad.

--- a/static/index.html
+++ b/static/index.html
@@ -113,12 +113,12 @@
 
     </div>
 
-
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-1.8.2.min.js"></script>
     <script src="/static/js/plugins.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <script src="/static/js/pointerevents.js"></script>
+    <script src="/static/js/touchpad.js"></script>
     <script src="/static/js/main.js"></script>
 
   </body>
